feat: EndpointUtils 주입받아서 사용하도록 수정